syntax = "proto2";

package mirrorWar.update;

import "player.proto";
import "mirror.proto";
import "charger.proto";
import "laser.proto";
import "gameReport.proto";

message Update {
    oneof update {
        player.PlayerState player_state = 1;
        mirror.MirrorState mirror_state = 2;
        charger.ChargerState charger_state = 3;
        laser.LaserState laser_state = 4;
        gameReport.Status game_report_state = 5;
    }
}

message Updates {
    repeated Update updates = 1;
}
